[metadata]
name = esp32-marlin-control
version = attr: esp32_marlin_control.__version__
description = Send Gcode to Marlin from ESP32 using serial connection
keywords = esp32, marlin, serial, usb
author = Thijs Triemstra
author_email = info@collab.nl
url = https://github.com/thijstriemstra/esp32-marlin-control
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
scripts = bin/esp32-marlin-control
python_requires = >=3.6, <4
install_requires =
    pyserial

[bdist_wheel]
universal = 1
